--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "ejs": "~2.5.6",
     "express": "~4.15.2",
     "express-session": "^1.15.6",
+    "ioredis": "^3.2.2",
+    "jwt-simple": "^0.5.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.7",
     "mongoosedao": "^1.0.13",
