--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "mongoose": "^4.13.7",
     "mongoosedao": "^1.0.13",
     "morgan": "~1.8.1",
-    "serve-favicon": "~2.4.2"
+    "redis": "^2.8.0",
+    "serve-favicon": "~2.4.2",
+    "store": "^2.0.12"
   }
 }
